--- a/_layouts/item/historic_site.html
+++ b/_layouts/item/historic_site.html
@@ -1,26 +1,69 @@
 ---
 # layout for "multiple" display template
 # creates large images with a gallery feature
-layout: item/item-page-base
 gallery: true
+layout: default
+# item-meta adds rich meta markup to the page on production build
+item-meta: true
 ---
 {% assign children = site.data[site.metadata] | where_exp: 'item','item.parentid == page.objectid' %}
+<div class="container py-3">
 
-<div class="mb-4 text-center">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a class="text-dark" href="{{ '/' | relative_url }}">Home</a></li>
+        <li class="breadcrumb-item"><a class="text-dark" href="{{ '/browse.html' | relative_url }}">Places</a></li>
+        <li class="breadcrumb-item active text-dark" aria-current="page">{{ page.title | truncatewords: 10 }}</li>
+    </ol>
+    <div class="my-0 h5 small">{{ page.display_template | replace: "_", " " | upcase }} {% if page.display_template == "compound_object" or page.display_template == "multiple" %}{% assign children = site.data[site.metadata] | where_exp: 'item','item.parentid == page.objectid' %} ({{ children | size }} Items){% endif %}</div>
+    <h2>{{ page.title }}</h2>
+    <h3 class="mb-4">{{ page.location }}</h3>
 
-    {% for child in children %}
-    <div id="{{ child.objectid }}" class="mb-4">
-        <a class="spotlight gallery-img" data-download="true" title="{% if page.title != child.title %}{{ child.title | escape }}{% else %}{{ page.title | escape }} [{{ forloop.index }}]{% endif %}" href="{{ child.object_location | relative_url }}">
-            <img src="{{ child.image_small | relative_url }}" alt="{{ child.image_alt_text | default: child.description | default: child.title | default: page.title | escape }}" class="img-fluid mb-2">
-            {% if page.title != child.title %}<div><small class="text-dark">{{ child.title }}</small></div>{% endif %}
-        </a>
+    <div class="row justify-content-center">
+        <div class="col-md-5">
+
+            {% include feature/mini-map.html objectid=page.objectid basemap="Esri_WorldStreetMap" map-zoom=14 %}
+
+            <p><strong>{{ page.title }} (Site # {{ page.site_number }})</strong></p>
+            <p><strong>Location:</strong> {{ page.location }}. {{ page.latitude }}, {{ page.longitude }}</p>
+            <p><strong>Description:</strong> {{ page.description }}</p>
+            <p><strong>Related:</strong> 
+                {% assign topics = page["subject"] | split: ";" %}
+                {% for t in topics %}
+                <a class="m-3" href="{{ t | strip | url_param_escape | prepend: '/browse.html#' | relative_url }}">{{ t | strip }}</a>
+                {% endfor %}
+            </p>
+            <p><a href="{{ '/map.html?location=' | append: page.latitude  | append: ',' | append: page.longitude | append: '&marker=' | append: page.objectid | relative_url }}" class="btn btn-outline-primary">View on Full Map</a></p>
+            
+        </div>
+        <div class="col-md-7">
+
+            <div class="mb-4 row">
+
+                {% for child in children %}
+                <div id="{{ child.objectid }}" class="col-md-6 mb-4">
+                    <a class="spotlight gallery-img" data-download="true" title="{% if page.title != child.title %}{{ child.title | escape }}{% else %}{{ page.title | escape }} [{{ forloop.index }}]{% endif %}" href="{{ child.object_location | relative_url }}">
+                        <img src="{{ child.image_small | relative_url }}" alt="{{ child.image_alt_text | default: child.description | default: child.title | default: page.title | escape }}" class="img-fluid mb-2 rounded">
+                        <div class="px-2"><small class="text-dark">{{ child.title }}{% if child.date %}, {{ child.date }}{% endif %}{% if child.creator %}, {{ child.creator }}{% endif %}{% if child.source %}, {{ child.source }}{% endif %}</small></div>
+                    </a>
+                </div>
+                {% endfor %}
+
+            </div>
+
+        </div>
+
+        <div class="col-md-5 py-4">
+            {% include item/citation-box.html %}
+            {% include item/contact-btn.html %}
+        </div>
+        {% if page.rights or page.rightsstatement %}
+        <div class="col-md-5 py-4">
+            {% include item/rights-box.html %}
+        </div>
+        {% endif %}
     </div>
-    {% endfor %}
 
-    <div class="my-2">
-
-        {% include item/child/compound-item-download-buttons.html %}
-
-    </div>
-
+    {%- if site.data.theme.browse-buttons == true -%}
+        {% include item/browse-buttons.html %}
+    {%- endif -%}
 </div>
