--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -7,7 +7,13 @@ layout: page
 
   <div class="col-md-8">
 
-    {% include index/description.html %}
+    <div class="card mb-3">
+      <div class="card-body">
+        <h2 class="card-title h5">Description</h2>
+        <p class="card-text">A scrapbook of photos, correspondence, and clippings documenting WWAMI's early years from 1971 to 1975. To view the entire scrapbook in a single file, visit the <a href= "{{ '/items/wwami_full.html' | relative_url }}">complete scrapbook</a> page.</p>
+        <a class="btn btn-primary" href="{{ '/about.html' | relative_url }}" role="button">Learn More &raquo;</a>
+      </div>
+    </div>
     {% include index/carousel.html title="Sample Items" %}
     
   </div>
