--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -13,7 +13,7 @@ layout: page
         <p class="card-text">This collaborative project, between the Latah Preservation Commission (LPC) and the University of Idaho Library, illustrates the Latah County Historic Touring Map that has been in print for many years.</p>
         <p class="card-text">LPC's <a href="{{ '/items/latahsites0093.html' | relative_url }}">printed map</a>, while handy to keep in the car, cannot include high resolution photos of each historic site. This digital version of the touring map includes contemporary photos of each location as well as historic images to illustrate the ongoing significance of the highlighted structures and landmarks. Historic photos were drawn from U of I's Special Collections and Archives as well as from other historical societies and organizations in Latah County.</p>
         <p>Learn more about the project and the history of Latah County on the <a href="{{ '/about.html' | relative_url }}">About page</a> or visit the <a href="{{ '/map.html' | relative_url }}">Map page</a> to start exploring!</p>
-        <a class="btn btn-lg btn-primary" href="{{ '/map.html' | relative_url }}" role="button">Explore the Map &raquo;</a>
+        <a class="btn btn-lg btn-primary" href="{{ '/map.html' | relative_url }}">Explore the Map &raquo;</a>
       </div>
     </div>
     {% include index/carousel.html title="Sample Items" %}
