--- a/_includes/item/child/compound-item-modal-gallery.html
+++ b/_includes/item/child/compound-item-modal-gallery.html
@@ -7,7 +7,7 @@
     This include requires the Liquid object "child" to be present! The item display requires the compound object item includes in "item/child/".
 
 {% endcomment %}
-<div class="row row-cols-2 row-cols-lg-4 g-2">
+<div class="row row-cols-2 row-cols-lg-3 g-2">
     {% for child in children %}
     <div class="col">
         <div class="card h-100">
@@ -16,9 +16,9 @@
                 
                     {% if child.title %}<div class="small text-dark mb-2">{{ child.title | truncatewords: 4 }}</div>{% endif %}
                     
-                    <div class="mb-2">
+                    <div class="mb-2" style="min-height: 500px;">
                         {% if child.image_thumb or child.image_small %}
-                        <img class="img-thumbnail compound-thumb" src="{{ child.image_thumb | default: child.image_small | relative_url }}" alt="{{ child.image_alt_text | default: child.description | default: child.title | escape }}">
+                        <img class="img-thumbnail compound-thumb" style="min-height: 500px; width: auto; object-fit: contain;" src="{{ child.image_small | relative_url }}" alt="{{ child.image_alt_text | default: child.description | default: child.title | escape }}">
                         {% else %}
                         <svg class="bi text-body compound-thumb" fill="currentColor" aria-hidden="true">
                             {%- assign icon_template = child.display_template | default: item.format -%}
