--- a/_sass/_theme-colors.scss
+++ b/_sass/_theme-colors.scss
@@ -8,7 +8,7 @@
 
 $white:    #fff !default;
 $black:    #191919 !default;
-$primary:       #0d6efd !default;
+$primary:       #003f51 !default;
 
 $min-contrast-ratio:   4.5 !default;
 $color-contrast-dark:      $black !default;
